# QuakerCMS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  SECURITY.md  docker-compose.yml  manage.py  mise.toml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/prompts/: speckit.implement.prompt.md  speckit.specify.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh  create-new-feature.sh  update-agent-context.sh
QuakerCMS/: wsgi.py
QuakerCMS/settings/: base.py  dev.py
QuakerCMS/templates/: base.html
docs/: design_considerations.md
home/: models.py
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
specs/001-tailwind-integration/: COMPLETED.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tailwind-integration/checklists/: requirements.md
specs/002-nav-menu-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nav-menu-system/checklists/: requirements.md
specs/002-nav-menu-system/contracts/: navigation-api.md
src/: Dockerfile  manage.py
src/content/: models.py  tests.py
src/content/migrations/: 0001_initial.py
src/content/templates/content/: content_page.html
src/content/templates/content/blocks/: heading_block.html
src/core/: constants.py  urls.py  wsgi.py
src/core/settings/: base.py  dev.py
src/core/templates/: 404.html  500.html  base.html
src/core/templates/components/: navigation.html
src/home/: models.py
src/home/migrations/: 0003_homepage_body.py
src/home/templates/home/: home_page.html  welcome_page.html
src/locales/: README.md  apps.py  models.py  tests.py  utils.py
src/locales/management/: __init__.py
src/locales/management/commands/: __init__.py  show_language_settings.py  sync_locales.py
src/locales/migrations/: 0001_initial.py  0002_alter_localesettings_available_languages.py  0002_alter_localesettings_default_language.py
src/navigation/: README.md  __init__.py  admin.py  apps.py  blocks.py  models.py  tests.py  views.py
src/navigation/management/commands/: scaffold_navbar_content.py
src/navigation/migrations/: 0001_initial.py  0002_alter_navigationmenusetting_menu_items.py  0003_alter_navigationmenusetting_menu_items.py  __init__.py
src/navigation/templates/navigation/: navigation.html
src/navigation/templatetags/: __init__.py  navigation_tags.py
src/search/templates/search/: search.html
src/theme/static_src/: package-lock.json  package.json
src/theme/static_src/src/: styles.css
src/theme/templates/: base.html
