[project]
name = "QuakerCMS"
version = "0.1.0"
description = "A content management system for Quaker communities."
authors = [
    "Brylie Christopher Oxley <brylie@amble.fi>",
    "John Inman <jfinmaniv@icloud.com>"
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.ruff]
# Django settings files commonly use star imports
[tool.ruff.lint.per-file-ignores]
"*/settings/*.py" = ["F403", "F405"]
