[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuakerCMS"
version = "0.1.0"
description = "A content management system for Quaker communities."
authors = [
    {name = "Brylie Christopher Oxley", email = "brylie@amble.fi"},
    {name = "John Inman", email = "jfinmaniv@icloud.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.1",
]

[tool.ruff]
# Django settings files commonly use star imports
[tool.ruff.lint.per-file-ignores]
"*/settings/*.py" = ["F403", "F405"]
