[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuakerCMS"
version = "0.1.0"
description = "A content management system for Quaker communities."
authors = [
    {name = "Brylie Christopher Oxley", email = "brylie@protonmail.com"},
    {name = "John Inman", email = "jfinmaniv@icloud.com"}
]
maintainers = [
    {name = "Brylie Christopher Oxley", email = "brylie@protonmail.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-tailwind[reload]>=4.2.0",
    "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "coverage>=7.9.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.1",
]

[tool.ruff]
# Django settings files commonly use star imports
[tool.ruff.lint.per-file-ignores]
"*/settings/*.py" = ["F403", "F405"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/management/commands/*",
    "*/tests.py",
    "*/test_*.py",
    "*_tests.py",
    "*/venv/*",
    "*/.venv/*",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.hatch.build.targets.wheel]
packages = ["src"]
